# pwesuite

./: .gitignore  README.md  dataset.py  demo.ipynb  inference.py  intrinsic_eval.py  preprocess.py  pyproject.toml  requirements.txt  setup.py  train.py  train_lm.py  train_masked_lm.py  util.py  vocab.py
create_dataset/: add_analogies.py  add_cognates.py  add_human_similarity.py  all.sh  download_huggingface.py  finalize_hf_jsonl.py  preprocess.py  test.py
data/: human_similarity.csv  inference_example.txt  ipa2cmu.map  ipa_tokens_bn.txt  ipa_tokens_es.txt  ipa_tokens_sw.txt  vocab_am.txt  vocab_bn.txt  vocab_es.txt  vocab_multi.txt  vocab_pl.txt  vocab_sw.txt  vocab_uz.txt
data/vocab/: ipa_am.txt  ipa_bn.txt  ipa_de.txt  ipa_en.txt  ipa_es.txt  ipa_fr.txt  ipa_multi.txt  ipa_pl.txt  ipa_sw.txt  ipa_uz.txt  ort_am.txt  ort_bn.txt  ort_de.txt  ort_en.txt  ort_es.txt  ort_fr.txt  ort_multi.txt  ort_pl.txt  ort_sw.txt  ort_uz.txt
downstream_tasks/: analogy_check.py  build_rhyme_dataset.py  fig_utils.py  plot_tsne.py  rhyme_classifier.py  rhyme_classifier_spacy.py
main/: add_analogies.py  add_human_similarity.py  dataset.py  download_data.sh  fig_utils.py  inference.py  intrinsic_eval.py  ipa2arp.py  ipa2cmu.py  prepare_data.sh  preprocess.py  train.py  utils.py
meta/: evaluation_all.csv
metric_learning/: create_data.py  fig_utils.py  neighborhood_check.py  rnn_metric_learner.py  rnn_metric_learning_model.py  run_metric_learning.py
metric_learning/patches/: 02-log_to_latex.py
misc/: examples_for_paper.py
model/: language_model.py  rnn_vae.py
model/metric_learning/: rnn_metric_learning_model_zero_dist.py
models/: rnn_vae.py
paper/: examples_for_paper.py
patches/: 00-sync_cluster.sh  01-plot_tsne.py  03-train_metric_learning.sh  04-apply_metric_learning.sh  05-join_lists.sh  06-join_lists.py  07-evaluate_all.sh  07-train_metric_learning_token.sh  08-apply_metric_learning_token.sh  08-plot_mismatch.py  09-plot_topology.py  10-example_for_paper.py  11-apply_baselines.sh  12-train_metric_learning_dims.sh  13-apply_metric_learning_dims.sh  14-join_lists_dims.sh  15-evaluate_all_dims.sh  16-plot_dims.py  22-train_metric_learning_size.sh  23-apply_metric_learning_size.sh  24-join_lists_size.sh  25-evaluate_all_size.sh  26-plot_size.py  30-plot_task_corr.py  31-train_autoencoder.sh  32-apply_autoencoder.sh  33-join_lists_autoencoder.sh  34-evaluate_all_autoencoder.sh  35-tsv_to_csv.py  36-create_sharma_sim.sh  37-train_sharma_embd.sh  38-eval_sharma.sh  38-join_lists_sharma.sh  39-corr_hum_art.py  40-retrieval_error_analysis.py
scripts/: 00-sync_cluster.sh  01-plot_tsne.py  02-log_to_latex.py  03-train_metric_learning.sh  04-apply_metric_learning.sh  05-join_lists.sh  07-evaluate_all.sh  08-plot_mismatch.py  09-plot_topology.py  12-train_metric_learning_dims.sh  13-apply_metric_learning_dims.sh  14-join_lists_dims.sh  16-plot_dims.py  22-train_metric_learning_size.sh  23-apply_metric_learning_size.sh  24-join_lists_size.sh  26-plot_size.py  30-plot_task_corr.py  31-train_autoencoder.sh  32-apply_autoencoder.sh  33-join_lists_autoencoder.sh  34-evaluate_all_autoencoder.sh  35-tsv_to_csv.py  38-eval_sharma.sh  40-retrieval_error_analysis.py  41-apply_count_based.sh  42-convert-to-jsonl.py  50-use_metric_learner.py
suite_evaluation/: correlations.py  eval_all.py  eval_analogy.py  eval_cognate.py  eval_correlations.py  eval_human_similarity.py  eval_mismatch.py  eval_retrieval.py  eval_rhyme.py  retrieval.py  rhyme_classification.py  rhyme_classifier.py
(+49 files in other folders)
