[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PWESuite"
version = "0.0.2"
description = "Evaluation suite for phonetic word embeddings and provides a few models."
authors = [
    { name = "Vilém Zouahr", email = "vzouhar@ethz.ch" },
    { name = "Kalvin Chang" },
    { name = "Nate B. Carlson" },
    { name = "Nathaniel R. Robinson" },
    { name = "Mrinmaya Sachan" },
    { name = "David R. Mortensen" },
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["phonetic", "word embeddings", "evaluation"]
urls = { "Homepage" = "https://github.com/zouharvi/pwesuite" }
dependencies = [
    "panphon2>=0.3",
    "numpy>=1.21",
    "transformers>=4.22",
    "wandb>=0.13",
    "panphon>=0.20",
    "epitran>=1.20",
    "tqdm>=4.64",
    "scikit-learn>=1.1",
    "scipy>=1.7",
    "emoji>=2.2",
    "Levenshtein>=0.20.9",
    "multiprocess>=0.70",
    "torchtext==0.18",
    "torch==2.3",
]

# only phantom package
[tool.setuptools]
packages = []
